Fix dark mode in contact section

--- a/src/sections/contact/Contact.module.scss
+++ b/src/sections/contact/Contact.module.scss
@@ -23,7 +23,6 @@
 .icon__container figure figcaption a {
 	text-decoration: none;
 	font-size: 12px;
-	color: #8b97b2;
 	font-family: "Google Sans Regular";
 }
 
@@ -64,7 +63,6 @@
 	text-align: center;
 	align-self: center;
 	justify-self: center;
-	color: #343434;
 	margin-top: 35px;
 	margin-bottom: 35px;
 }
@@ -103,7 +101,6 @@
 	background-color: #4BA598;
 	text-decoration: none;
 	color: #343434;
-	;
 	padding: 15px;
 	margin-top: 25px;
 	border-radius: 4px;
